--- a/mystyle.css
+++ b/mystyle.css
@@ -8,7 +8,7 @@
 	}
 .bg0 {background-image: url(http://1.bp.blogspot.com/-A4mL9GrVKkY/T-CFQDFUR1I/AAAAAAAAAFE/CVbh9va9rl8/s1600/JailCell_03comp.jpg); background-size: 150%;}
 .bg1 {background-image: url(http://goodmenproject.com/wp-content/uploads/2012/11/Prison-bars.jpg); background-size: 100%;}
-.bg2 {background-image: url();}
+.bg2 {background-image: url(http://www.pulsamerica.co.uk/wp-content/uploads/2012/08/2012_08_25_Refiner_a_Amuay_126.jpg); background-size: 120%}
 .bg3 {background-image: url();}
 .bg4 {background-image: url();}
 .bg5 {background-image: url();}
