Game mode updates and bug fixes

--- a/mystyle.css
+++ b/mystyle.css
@@ -9,8 +9,8 @@
 .bg0 {background-image: url(http://1.bp.blogspot.com/-A4mL9GrVKkY/T-CFQDFUR1I/AAAAAAAAAFE/CVbh9va9rl8/s1600/JailCell_03comp.jpg); background-size: 150%;}
 .bg1 {background-image: url(http://goodmenproject.com/wp-content/uploads/2012/11/Prison-bars.jpg); background-size: 100%;}
 .bg2 {background-image: url(http://www.pulsamerica.co.uk/wp-content/uploads/2012/08/2012_08_25_Refiner_a_Amuay_126.jpg); background-size: 120%}
-.bg3 {background-image: url();}
-.bg4 {background-image: url();}
+.bg3 {background-image: url(http://treasure.diylol.com/uploads/post/image/423446/resized_high-expectations-asian-father-meme-generator-you-lose-you-have-brought-great-dishonor-to-your-family-52424c.jpg); background-size: 100%;}
+.bg4 {background-image: url(http://timesofsandiego.com/wp-content/uploads/2014/08/640px-Handcuffs_on_table.jpg); background-size: 100%}
 .bg5 {background-image: url();}
 .bg6 {background-image: url();}
 .bg7 {background-image: url();}
